parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID saveprogramname declare
Rule 2     declare -> decvars decfuncs main_block
Rule 3     main_block -> MAIN changecontext LPAREN RPAREN block
Rule 4     block -> LCURLY decvars blockcontent RCURLY
Rule 5     returnblock -> LCURLY decvars blockcontent RETURN exp SEMICOLON RCURLY
Rule 6     blockcontent -> empty
Rule 7     blockcontent -> statute blockcontent
Rule 8     decvars -> empty
Rule 9     decvars -> VARS decvar_line
Rule 10    decvar_line -> type decvar SEMICOLON decvar_line
Rule 11    decvar_line -> type decvar SEMICOLON
Rule 12    decvar -> var COMMA decvar
Rule 13    decvar -> var
Rule 14    var -> BOOL
Rule 15    var -> FLOAT
Rule 16    var -> INT
Rule 17    var -> ELSE
Rule 18    var -> IF
Rule 19    var -> PRINT
Rule 20    var -> INPUT
Rule 21    var -> WHILE
Rule 22    var -> DO
Rule 23    var -> BY
Rule 24    var -> TO
Rule 25    var -> FROM
Rule 26    var -> VOID
Rule 27    var -> RETURN
Rule 28    var -> FUNC
Rule 29    var -> MAIN
Rule 30    var -> VARS
Rule 31    var -> PROGRAM
Rule 32    var -> ID LBRACKET CTEINT RBRACKET LBRACKET CTEINT RBRACKET
Rule 33    var -> ID LBRACKET CTEINT RBRACKET
Rule 34    var -> ID
Rule 35    decfuncs -> empty
Rule 36    decfuncs -> func decfuncs
Rule 37    func -> FUNC typefunc
Rule 38    func -> FUNC voidfunc
Rule 39    voidfunc -> VOID ID changecontext LPAREN params RPAREN block
Rule 40    typefunc -> type ID changecontext LPAREN params RPAREN returnblock
Rule 41    params -> empty
Rule 42    params -> type ID COMMA params
Rule 43    params -> type ID
Rule 44    call -> ID LPAREN callvalues RPAREN
Rule 45    callvalues -> empty
Rule 46    callvalues -> exp COMMA callvalues
Rule 47    callvalues -> exp
Rule 48    super_exp_aux -> logic super_exp
Rule 49    super_exp_aux -> empty
Rule 50    super_exp -> expression super_exp_quadgen super_exp_aux
Rule 51    logic -> OR
Rule 52    logic -> AND
Rule 53    super_exp_quadgen -> <empty>
Rule 54    expression_aux -> relation expression
Rule 55    expression_aux -> empty
Rule 56    expression -> exp expression_quadgen expression_aux
Rule 57    relation -> NEQ
Rule 58    relation -> EQ
Rule 59    relation -> LTE
Rule 60    relation -> GTE
Rule 61    relation -> LT
Rule 62    relation -> GT
Rule 63    expression_quadgen -> <empty>
Rule 64    exp_aux -> exp_sign exp
Rule 65    exp_aux -> empty
Rule 66    exp -> term exp_quadgen exp_aux
Rule 67    exp_sign -> MINUS
Rule 68    exp_sign -> PLUS
Rule 69    exp_quadgen -> <empty>
Rule 70    term_aux -> term_sign term
Rule 71    term_aux -> empty
Rule 72    term -> factor term_quadgen term_aux
Rule 73    term_sign -> DIVIDE
Rule 74    term_sign -> TIMES
Rule 75    term_quadgen -> <empty>
Rule 76    factor -> LPAREN fakefloor super_exp RPAREN
Rule 77    factor -> varcte
Rule 78    factor -> call
Rule 79    factor -> var
Rule 80    fakefloor -> <empty>
Rule 81    forloop -> FROM var ASSIGN expression TO expression BY expression DO block
Rule 82    forloop -> FROM var ASSIGN expression TO expression DO block
Rule 83    whileloop -> WHILE LPAREN expression RPAREN block
Rule 84    assignment -> assignment_var assignment_sign expression SEMICOLON
Rule 85    assignment_sign -> ASSIGN
Rule 86    assignment_var -> ID
Rule 87    read -> INPUT LPAREN readaux RPAREN SEMICOLON
Rule 88    readaux -> readvalue COMMA readaux
Rule 89    readaux -> readvalue
Rule 90    readvalue -> var
Rule 91    write -> PRINT LPAREN writeaux RPAREN SEMICOLON
Rule 92    writeaux -> writevalues
Rule 93    writeaux -> writevalues COMMA writeaux
Rule 94    writevalues -> CTESTRING
Rule 95    writevalues -> super_exp
Rule 96    condition -> IF LPAREN expression RPAREN block ELSE block
Rule 97    condition -> IF LPAREN expression RPAREN block
Rule 98    varcte -> CTEBOOL
Rule 99    varcte -> CTEFLOAT
Rule 100   varcte -> CTEINT
Rule 101   type -> BOOL
Rule 102   type -> FLOAT
Rule 103   type -> INT
Rule 104   statute -> call
Rule 105   statute -> forloop
Rule 106   statute -> whileloop
Rule 107   statute -> read
Rule 108   statute -> write
Rule 109   statute -> condition
Rule 110   statute -> assignment
Rule 111   changecontext -> <empty>
Rule 112   saveprogramname -> <empty>
Rule 113   empty -> <empty>

Terminals, with rules where they appear:

AND                  : 52
ASSIGN               : 81 82 85
BOOL                 : 14 101
BY                   : 23 81
COMMA                : 12 42 46 88 93
CTEBOOL              : 98
CTEFLOAT             : 99
CTEINT               : 32 32 33 100
CTESTRING            : 94
DIVIDE               : 73
DO                   : 22 81 82
ELSE                 : 17 96
EQ                   : 58
FLOAT                : 15 102
FROM                 : 25 81 82
FUNC                 : 28 37 38
GT                   : 62
GTE                  : 60
ID                   : 1 32 33 34 39 40 42 43 44 86
IF                   : 18 96 97
INPUT                : 20 87
INT                  : 16 103
LBRACKET             : 32 32 33
LCURLY               : 4 5
LPAREN               : 3 39 40 44 76 83 87 91 96 97
LT                   : 61
LTE                  : 59
MAIN                 : 3 29
MINUS                : 67
NEQ                  : 57
OR                   : 51
PLUS                 : 68
PRINT                : 19 91
PROGRAM              : 1 31
RBRACKET             : 32 32 33
RCURLY               : 4 5
RETURN               : 5 27
RPAREN               : 3 39 40 44 76 83 87 91 96 97
SEMICOLON            : 5 10 11 84 87 91
TIMES                : 74
TO                   : 24 81 82
VARS                 : 9 30
VOID                 : 26 39
WHILE                : 21 83
error                : 

Nonterminals, with rules where they appear:

assignment           : 110
assignment_sign      : 84
assignment_var       : 84
block                : 3 39 81 82 83 96 96 97
blockcontent         : 4 5 7
call                 : 78 104
callvalues           : 44 46
changecontext        : 3 39 40
condition            : 109
decfuncs             : 2 36
declare              : 1
decvar               : 10 11 12
decvar_line          : 9 10
decvars              : 2 4 5
empty                : 6 8 35 41 45 49 55 65 71
exp                  : 5 46 47 56 64
exp_aux              : 66
exp_quadgen          : 66
exp_sign             : 64
expression           : 50 54 81 81 81 82 82 83 84 96 97
expression_aux       : 56
expression_quadgen   : 56
factor               : 72
fakefloor            : 76
forloop              : 105
func                 : 36
logic                : 48
main_block           : 2
params               : 39 40 42
program              : 0
read                 : 107
readaux              : 87 88
readvalue            : 88 89
relation             : 54
returnblock          : 40
saveprogramname      : 1
statute              : 7
super_exp            : 48 76 95
super_exp_aux        : 50
super_exp_quadgen    : 50
term                 : 66 70
term_aux             : 72
term_quadgen         : 72
term_sign            : 70
type                 : 10 11 40 42 43
typefunc             : 37
var                  : 12 13 79 81 82 90
varcte               : 77
voidfunc             : 38
whileloop            : 106
write                : 108
writeaux             : 91 93
writevalues          : 92 93


state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID saveprogramname declare
    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .


state 2

    (1) program -> PROGRAM . ID saveprogramname declare
    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . saveprogramname declare
    (112) saveprogramname -> .
    VARS            reduce using rule 112 (saveprogramname -> .)
    FUNC            reduce using rule 112 (saveprogramname -> .)
    MAIN            reduce using rule 112 (saveprogramname -> .)

    saveprogramname                shift and go to state 4

state 4

    (1) program -> PROGRAM ID saveprogramname . declare
    (2) declare -> . decvars decfuncs main_block
    (8) decvars -> . empty
    (9) decvars -> . VARS decvar_line
    (113) empty -> .
    VARS            shift and go to state 8
    FUNC            reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)

    declare                        shift and go to state 5
    decvars                        shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID saveprogramname declare .
    $end            reduce using rule 1 (program -> PROGRAM ID saveprogramname declare .)


state 6

    (2) declare -> decvars . decfuncs main_block
    (35) decfuncs -> . empty
    (36) decfuncs -> . func decfuncs
    (113) empty -> .
    (37) func -> . FUNC typefunc
    (38) func -> . FUNC voidfunc
    MAIN            reduce using rule 113 (empty -> .)
    FUNC            shift and go to state 12

    decfuncs                       shift and go to state 9
    empty                          shift and go to state 10
    func                           shift and go to state 11

state 7

    (8) decvars -> empty .
    FUNC            reduce using rule 8 (decvars -> empty .)
    MAIN            reduce using rule 8 (decvars -> empty .)
    ID              reduce using rule 8 (decvars -> empty .)
    FROM            reduce using rule 8 (decvars -> empty .)
    WHILE           reduce using rule 8 (decvars -> empty .)
    INPUT           reduce using rule 8 (decvars -> empty .)
    PRINT           reduce using rule 8 (decvars -> empty .)
    IF              reduce using rule 8 (decvars -> empty .)
    RCURLY          reduce using rule 8 (decvars -> empty .)
    RETURN          reduce using rule 8 (decvars -> empty .)


state 8

    (9) decvars -> VARS . decvar_line
    (10) decvar_line -> . type decvar SEMICOLON decvar_line
    (11) decvar_line -> . type decvar SEMICOLON
    (101) type -> . BOOL
    (102) type -> . FLOAT
    (103) type -> . INT
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17

    decvar_line                    shift and go to state 13
    type                           shift and go to state 14

state 9

    (2) declare -> decvars decfuncs . main_block
    (3) main_block -> . MAIN changecontext LPAREN RPAREN block
    MAIN            shift and go to state 19

    main_block                     shift and go to state 18

state 10

    (35) decfuncs -> empty .
    MAIN            reduce using rule 35 (decfuncs -> empty .)


state 11

    (36) decfuncs -> func . decfuncs
    (35) decfuncs -> . empty
    (36) decfuncs -> . func decfuncs
    (113) empty -> .
    (37) func -> . FUNC typefunc
    (38) func -> . FUNC voidfunc
    MAIN            reduce using rule 113 (empty -> .)
    FUNC            shift and go to state 12

    func                           shift and go to state 11
    decfuncs                       shift and go to state 20
    empty                          shift and go to state 10

state 12

    (37) func -> FUNC . typefunc
    (38) func -> FUNC . voidfunc
    (40) typefunc -> . type ID changecontext LPAREN params RPAREN returnblock
    (39) voidfunc -> . VOID ID changecontext LPAREN params RPAREN block
    (101) type -> . BOOL
    (102) type -> . FLOAT
    (103) type -> . INT
    VOID            shift and go to state 24
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17

    typefunc                       shift and go to state 21
    voidfunc                       shift and go to state 22
    type                           shift and go to state 23

state 13

    (9) decvars -> VARS decvar_line .
    FUNC            reduce using rule 9 (decvars -> VARS decvar_line .)
    MAIN            reduce using rule 9 (decvars -> VARS decvar_line .)
    ID              reduce using rule 9 (decvars -> VARS decvar_line .)
    FROM            reduce using rule 9 (decvars -> VARS decvar_line .)
    WHILE           reduce using rule 9 (decvars -> VARS decvar_line .)
    INPUT           reduce using rule 9 (decvars -> VARS decvar_line .)
    PRINT           reduce using rule 9 (decvars -> VARS decvar_line .)
    IF              reduce using rule 9 (decvars -> VARS decvar_line .)
    RCURLY          reduce using rule 9 (decvars -> VARS decvar_line .)
    RETURN          reduce using rule 9 (decvars -> VARS decvar_line .)


state 14

    (10) decvar_line -> type . decvar SEMICOLON decvar_line
    (11) decvar_line -> type . decvar SEMICOLON
    (12) decvar -> . var COMMA decvar
    (13) decvar -> . var
    (14) var -> . BOOL
    (15) var -> . FLOAT
    (16) var -> . INT
    (17) var -> . ELSE
    (18) var -> . IF
    (19) var -> . PRINT
    (20) var -> . INPUT
    (21) var -> . WHILE
    (22) var -> . DO
    (23) var -> . BY
    (24) var -> . TO
    (25) var -> . FROM
    (26) var -> . VOID
    (27) var -> . RETURN
    (28) var -> . FUNC
    (29) var -> . MAIN
    (30) var -> . VARS
    (31) var -> . PROGRAM
    (32) var -> . ID LBRACKET CTEINT RBRACKET LBRACKET CTEINT RBRACKET
    (33) var -> . ID LBRACKET CTEINT RBRACKET
    (34) var -> . ID
    BOOL            shift and go to state 27
    FLOAT           shift and go to state 28
    INT             shift and go to state 29
    ELSE            shift and go to state 30
    IF              shift and go to state 31
    PRINT           shift and go to state 32
    INPUT           shift and go to state 33
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    BY              shift and go to state 36
    TO              shift and go to state 37
    FROM            shift and go to state 38
    VOID            shift and go to state 39
    RETURN          shift and go to state 40
    FUNC            shift and go to state 41
    MAIN            shift and go to state 42
    VARS            shift and go to state 43
    PROGRAM         shift and go to state 44
    ID              shift and go to state 45

    decvar                         shift and go to state 25
    var                            shift and go to state 26

state 15

    (101) type -> BOOL .
    BOOL            reduce using rule 101 (type -> BOOL .)
    FLOAT           reduce using rule 101 (type -> BOOL .)
    INT             reduce using rule 101 (type -> BOOL .)
    ELSE            reduce using rule 101 (type -> BOOL .)
    IF              reduce using rule 101 (type -> BOOL .)
    PRINT           reduce using rule 101 (type -> BOOL .)
    INPUT           reduce using rule 101 (type -> BOOL .)
    WHILE           reduce using rule 101 (type -> BOOL .)
    DO              reduce using rule 101 (type -> BOOL .)
    BY              reduce using rule 101 (type -> BOOL .)
    TO              reduce using rule 101 (type -> BOOL .)
    FROM            reduce using rule 101 (type -> BOOL .)
    VOID            reduce using rule 101 (type -> BOOL .)
    RETURN          reduce using rule 101 (type -> BOOL .)
    FUNC            reduce using rule 101 (type -> BOOL .)
    MAIN            reduce using rule 101 (type -> BOOL .)
    VARS            reduce using rule 101 (type -> BOOL .)
    PROGRAM         reduce using rule 101 (type -> BOOL .)
    ID              reduce using rule 101 (type -> BOOL .)


state 16

    (102) type -> FLOAT .
    BOOL            reduce using rule 102 (type -> FLOAT .)
    FLOAT           reduce using rule 102 (type -> FLOAT .)
    INT             reduce using rule 102 (type -> FLOAT .)
    ELSE            reduce using rule 102 (type -> FLOAT .)
    IF              reduce using rule 102 (type -> FLOAT .)
    PRINT           reduce using rule 102 (type -> FLOAT .)
    INPUT           reduce using rule 102 (type -> FLOAT .)
    WHILE           reduce using rule 102 (type -> FLOAT .)
    DO              reduce using rule 102 (type -> FLOAT .)
    BY              reduce using rule 102 (type -> FLOAT .)
    TO              reduce using rule 102 (type -> FLOAT .)
    FROM            reduce using rule 102 (type -> FLOAT .)
    VOID            reduce using rule 102 (type -> FLOAT .)
    RETURN          reduce using rule 102 (type -> FLOAT .)
    FUNC            reduce using rule 102 (type -> FLOAT .)
    MAIN            reduce using rule 102 (type -> FLOAT .)
    VARS            reduce using rule 102 (type -> FLOAT .)
    PROGRAM         reduce using rule 102 (type -> FLOAT .)
    ID              reduce using rule 102 (type -> FLOAT .)


state 17

    (103) type -> INT .
    BOOL            reduce using rule 103 (type -> INT .)
    FLOAT           reduce using rule 103 (type -> INT .)
    INT             reduce using rule 103 (type -> INT .)
    ELSE            reduce using rule 103 (type -> INT .)
    IF              reduce using rule 103 (type -> INT .)
    PRINT           reduce using rule 103 (type -> INT .)
    INPUT           reduce using rule 103 (type -> INT .)
    WHILE           reduce using rule 103 (type -> INT .)
    DO              reduce using rule 103 (type -> INT .)
    BY              reduce using rule 103 (type -> INT .)
    TO              reduce using rule 103 (type -> INT .)
    FROM            reduce using rule 103 (type -> INT .)
    VOID            reduce using rule 103 (type -> INT .)
    RETURN          reduce using rule 103 (type -> INT .)
    FUNC            reduce using rule 103 (type -> INT .)
    MAIN            reduce using rule 103 (type -> INT .)
    VARS            reduce using rule 103 (type -> INT .)
    PROGRAM         reduce using rule 103 (type -> INT .)
    ID              reduce using rule 103 (type -> INT .)


state 18

    (2) declare -> decvars decfuncs main_block .
    $end            reduce using rule 2 (declare -> decvars decfuncs main_block .)


state 19

    (3) main_block -> MAIN . changecontext LPAREN RPAREN block
    (111) changecontext -> .
    LPAREN          reduce using rule 111 (changecontext -> .)

    changecontext                  shift and go to state 46

state 20

    (36) decfuncs -> func decfuncs .
    MAIN            reduce using rule 36 (decfuncs -> func decfuncs .)


state 21

    (37) func -> FUNC typefunc .
    FUNC            reduce using rule 37 (func -> FUNC typefunc .)
    MAIN            reduce using rule 37 (func -> FUNC typefunc .)


state 22

    (38) func -> FUNC voidfunc .
    FUNC            reduce using rule 38 (func -> FUNC voidfunc .)
    MAIN            reduce using rule 38 (func -> FUNC voidfunc .)


state 23

    (40) typefunc -> type . ID changecontext LPAREN params RPAREN returnblock
    ID              shift and go to state 47


state 24

    (39) voidfunc -> VOID . ID changecontext LPAREN params RPAREN block
    ID              shift and go to state 48


state 25

    (10) decvar_line -> type decvar . SEMICOLON decvar_line
    (11) decvar_line -> type decvar . SEMICOLON
    SEMICOLON       shift and go to state 49


state 26

    (12) decvar -> var . COMMA decvar
    (13) decvar -> var .
    COMMA           shift and go to state 50
    SEMICOLON       reduce using rule 13 (decvar -> var .)


state 27

    (14) var -> BOOL .
    COMMA           reduce using rule 14 (var -> BOOL .)
    SEMICOLON       reduce using rule 14 (var -> BOOL .)
    ASSIGN          reduce using rule 14 (var -> BOOL .)
    DIVIDE          reduce using rule 14 (var -> BOOL .)
    TIMES           reduce using rule 14 (var -> BOOL .)
    MINUS           reduce using rule 14 (var -> BOOL .)
    PLUS            reduce using rule 14 (var -> BOOL .)
    RPAREN          reduce using rule 14 (var -> BOOL .)
    NEQ             reduce using rule 14 (var -> BOOL .)
    EQ              reduce using rule 14 (var -> BOOL .)
    LTE             reduce using rule 14 (var -> BOOL .)
    GTE             reduce using rule 14 (var -> BOOL .)
    LT              reduce using rule 14 (var -> BOOL .)
    GT              reduce using rule 14 (var -> BOOL .)
    OR              reduce using rule 14 (var -> BOOL .)
    AND             reduce using rule 14 (var -> BOOL .)
    TO              reduce using rule 14 (var -> BOOL .)
    BY              reduce using rule 14 (var -> BOOL .)
    DO              reduce using rule 14 (var -> BOOL .)


state 28

    (15) var -> FLOAT .
    COMMA           reduce using rule 15 (var -> FLOAT .)
    SEMICOLON       reduce using rule 15 (var -> FLOAT .)
    ASSIGN          reduce using rule 15 (var -> FLOAT .)
    DIVIDE          reduce using rule 15 (var -> FLOAT .)
    TIMES           reduce using rule 15 (var -> FLOAT .)
    MINUS           reduce using rule 15 (var -> FLOAT .)
    PLUS            reduce using rule 15 (var -> FLOAT .)
    RPAREN          reduce using rule 15 (var -> FLOAT .)
    NEQ             reduce using rule 15 (var -> FLOAT .)
    EQ              reduce using rule 15 (var -> FLOAT .)
    LTE             reduce using rule 15 (var -> FLOAT .)
    GTE             reduce using rule 15 (var -> FLOAT .)
    LT              reduce using rule 15 (var -> FLOAT .)
    GT              reduce using rule 15 (var -> FLOAT .)
    OR              reduce using rule 15 (var -> FLOAT .)
    AND             reduce using rule 15 (var -> FLOAT .)
    TO              reduce using rule 15 (var -> FLOAT .)
    BY              reduce using rule 15 (var -> FLOAT .)
    DO              reduce using rule 15 (var -> FLOAT .)


state 29

    (16) var -> INT .
    COMMA           reduce using rule 16 (var -> INT .)
    SEMICOLON       reduce using rule 16 (var -> INT .)
    ASSIGN          reduce using rule 16 (var -> INT .)
    DIVIDE          reduce using rule 16 (var -> INT .)
    TIMES           reduce using rule 16 (var -> INT .)
    MINUS           reduce using rule 16 (var -> INT .)
    PLUS            reduce using rule 16 (var -> INT .)
    RPAREN          reduce using rule 16 (var -> INT .)
    NEQ             reduce using rule 16 (var -> INT .)
    EQ              reduce using rule 16 (var -> INT .)
    LTE             reduce using rule 16 (var -> INT .)
    GTE             reduce using rule 16 (var -> INT .)
    LT              reduce using rule 16 (var -> INT .)
    GT              reduce using rule 16 (var -> INT .)
    OR              reduce using rule 16 (var -> INT .)
    AND             reduce using rule 16 (var -> INT .)
    TO              reduce using rule 16 (var -> INT .)
    BY              reduce using rule 16 (var -> INT .)
    DO              reduce using rule 16 (var -> INT .)


state 30

    (17) var -> ELSE .
    COMMA           reduce using rule 17 (var -> ELSE .)
    SEMICOLON       reduce using rule 17 (var -> ELSE .)
    ASSIGN          reduce using rule 17 (var -> ELSE .)
    DIVIDE          reduce using rule 17 (var -> ELSE .)
    TIMES           reduce using rule 17 (var -> ELSE .)
    MINUS           reduce using rule 17 (var -> ELSE .)
    PLUS            reduce using rule 17 (var -> ELSE .)
    RPAREN          reduce using rule 17 (var -> ELSE .)
    NEQ             reduce using rule 17 (var -> ELSE .)
    EQ              reduce using rule 17 (var -> ELSE .)
    LTE             reduce using rule 17 (var -> ELSE .)
    GTE             reduce using rule 17 (var -> ELSE .)
    LT              reduce using rule 17 (var -> ELSE .)
    GT              reduce using rule 17 (var -> ELSE .)
    OR              reduce using rule 17 (var -> ELSE .)
    AND             reduce using rule 17 (var -> ELSE .)
    TO              reduce using rule 17 (var -> ELSE .)
    BY              reduce using rule 17 (var -> ELSE .)
    DO              reduce using rule 17 (var -> ELSE .)


state 31

    (18) var -> IF .
    COMMA           reduce using rule 18 (var -> IF .)
    SEMICOLON       reduce using rule 18 (var -> IF .)
    ASSIGN          reduce using rule 18 (var -> IF .)
    DIVIDE          reduce using rule 18 (var -> IF .)
    TIMES           reduce using rule 18 (var -> IF .)
    MINUS           reduce using rule 18 (var -> IF .)
    PLUS            reduce using rule 18 (var -> IF .)
    RPAREN          reduce using rule 18 (var -> IF .)
    NEQ             reduce using rule 18 (var -> IF .)
    EQ              reduce using rule 18 (var -> IF .)
    LTE             reduce using rule 18 (var -> IF .)
    GTE             reduce using rule 18 (var -> IF .)
    LT              reduce using rule 18 (var -> IF .)
    GT              reduce using rule 18 (var -> IF .)
    OR              reduce using rule 18 (var -> IF .)
    AND             reduce using rule 18 (var -> IF .)
    TO              reduce using rule 18 (var -> IF .)
    BY              reduce using rule 18 (var -> IF .)
    DO              reduce using rule 18 (var -> IF .)


state 32

    (19) var -> PRINT .
    COMMA           reduce using rule 19 (var -> PRINT .)
    SEMICOLON       reduce using rule 19 (var -> PRINT .)
    ASSIGN          reduce using rule 19 (var -> PRINT .)
    DIVIDE          reduce using rule 19 (var -> PRINT .)
    TIMES           reduce using rule 19 (var -> PRINT .)
    MINUS           reduce using rule 19 (var -> PRINT .)
    PLUS            reduce using rule 19 (var -> PRINT .)
    RPAREN          reduce using rule 19 (var -> PRINT .)
    NEQ             reduce using rule 19 (var -> PRINT .)
    EQ              reduce using rule 19 (var -> PRINT .)
    LTE             reduce using rule 19 (var -> PRINT .)
    GTE             reduce using rule 19 (var -> PRINT .)
    LT              reduce using rule 19 (var -> PRINT .)
    GT              reduce using rule 19 (var -> PRINT .)
    OR              reduce using rule 19 (var -> PRINT .)
    AND             reduce using rule 19 (var -> PRINT .)
    TO              reduce using rule 19 (var -> PRINT .)
    BY              reduce using rule 19 (var -> PRINT .)
    DO              reduce using rule 19 (var -> PRINT .)


state 33

    (20) var -> INPUT .
    COMMA           reduce using rule 20 (var -> INPUT .)
    SEMICOLON       reduce using rule 20 (var -> INPUT .)
    ASSIGN          reduce using rule 20 (var -> INPUT .)
    DIVIDE          reduce using rule 20 (var -> INPUT .)
    TIMES           reduce using rule 20 (var -> INPUT .)
    MINUS           reduce using rule 20 (var -> INPUT .)
    PLUS            reduce using rule 20 (var -> INPUT .)
    RPAREN          reduce using rule 20 (var -> INPUT .)
    NEQ             reduce using rule 20 (var -> INPUT .)
    EQ              reduce using rule 20 (var -> INPUT .)
    LTE             reduce using rule 20 (var -> INPUT .)
    GTE             reduce using rule 20 (var -> INPUT .)
    LT              reduce using rule 20 (var -> INPUT .)
    GT              reduce using rule 20 (var -> INPUT .)
    OR              reduce using rule 20 (var -> INPUT .)
    AND             reduce using rule 20 (var -> INPUT .)
    TO              reduce using rule 20 (var -> INPUT .)
    BY              reduce using rule 20 (var -> INPUT .)
    DO              reduce using rule 20 (var -> INPUT .)


state 34

    (21) var -> WHILE .
    COMMA           reduce using rule 21 (var -> WHILE .)
    SEMICOLON       reduce using rule 21 (var -> WHILE .)
    ASSIGN          reduce using rule 21 (var -> WHILE .)
    DIVIDE          reduce using rule 21 (var -> WHILE .)
    TIMES           reduce using rule 21 (var -> WHILE .)
    MINUS           reduce using rule 21 (var -> WHILE .)
    PLUS            reduce using rule 21 (var -> WHILE .)
    RPAREN          reduce using rule 21 (var -> WHILE .)
    NEQ             reduce using rule 21 (var -> WHILE .)
    EQ              reduce using rule 21 (var -> WHILE .)
    LTE             reduce using rule 21 (var -> WHILE .)
    GTE             reduce using rule 21 (var -> WHILE .)
    LT              reduce using rule 21 (var -> WHILE .)
    GT              reduce using rule 21 (var -> WHILE .)
    OR              reduce using rule 21 (var -> WHILE .)
    AND             reduce using rule 21 (var -> WHILE .)
    TO              reduce using rule 21 (var -> WHILE .)
    BY              reduce using rule 21 (var -> WHILE .)
    DO              reduce using rule 21 (var -> WHILE .)


state 35

    (22) var -> DO .
    COMMA           reduce using rule 22 (var -> DO .)
    SEMICOLON       reduce using rule 22 (var -> DO .)
    ASSIGN          reduce using rule 22 (var -> DO .)
    DIVIDE          reduce using rule 22 (var -> DO .)
    TIMES           reduce using rule 22 (var -> DO .)
    MINUS           reduce using rule 22 (var -> DO .)
    PLUS            reduce using rule 22 (var -> DO .)
    RPAREN          reduce using rule 22 (var -> DO .)
    NEQ             reduce using rule 22 (var -> DO .)
    EQ              reduce using rule 22 (var -> DO .)
    LTE             reduce using rule 22 (var -> DO .)
    GTE             reduce using rule 22 (var -> DO .)
    LT              reduce using rule 22 (var -> DO .)
    GT              reduce using rule 22 (var -> DO .)
    OR              reduce using rule 22 (var -> DO .)
    AND             reduce using rule 22 (var -> DO .)
    TO              reduce using rule 22 (var -> DO .)
    BY              reduce using rule 22 (var -> DO .)
    DO              reduce using rule 22 (var -> DO .)


state 36

    (23) var -> BY .
    COMMA           reduce using rule 23 (var -> BY .)
    SEMICOLON       reduce using rule 23 (var -> BY .)
    ASSIGN          reduce using rule 23 (var -> BY .)
    DIVIDE          reduce using rule 23 (var -> BY .)
    TIMES           reduce using rule 23 (var -> BY .)
    MINUS           reduce using rule 23 (var -> BY .)
    PLUS            reduce using rule 23 (var -> BY .)
    RPAREN          reduce using rule 23 (var -> BY .)
    NEQ             reduce using rule 23 (var -> BY .)
    EQ              reduce using rule 23 (var -> BY .)
    LTE             reduce using rule 23 (var -> BY .)
    GTE             reduce using rule 23 (var -> BY .)
    LT              reduce using rule 23 (var -> BY .)
    GT              reduce using rule 23 (var -> BY .)
    OR              reduce using rule 23 (var -> BY .)
    AND             reduce using rule 23 (var -> BY .)
    TO              reduce using rule 23 (var -> BY .)
    BY              reduce using rule 23 (var -> BY .)
    DO              reduce using rule 23 (var -> BY .)


state 37

    (24) var -> TO .
    COMMA           reduce using rule 24 (var -> TO .)
    SEMICOLON       reduce using rule 24 (var -> TO .)
    ASSIGN          reduce using rule 24 (var -> TO .)
    DIVIDE          reduce using rule 24 (var -> TO .)
    TIMES           reduce using rule 24 (var -> TO .)
    MINUS           reduce using rule 24 (var -> TO .)
    PLUS            reduce using rule 24 (var -> TO .)
    RPAREN          reduce using rule 24 (var -> TO .)
    NEQ             reduce using rule 24 (var -> TO .)
    EQ              reduce using rule 24 (var -> TO .)
    LTE             reduce using rule 24 (var -> TO .)
    GTE             reduce using rule 24 (var -> TO .)
    LT              reduce using rule 24 (var -> TO .)
    GT              reduce using rule 24 (var -> TO .)
    OR              reduce using rule 24 (var -> TO .)
    AND             reduce using rule 24 (var -> TO .)
    TO              reduce using rule 24 (var -> TO .)
    BY              reduce using rule 24 (var -> TO .)
    DO              reduce using rule 24 (var -> TO .)


state 38

    (25) var -> FROM .
    COMMA           reduce using rule 25 (var -> FROM .)
    SEMICOLON       reduce using rule 25 (var -> FROM .)
    ASSIGN          reduce using rule 25 (var -> FROM .)
    DIVIDE          reduce using rule 25 (var -> FROM .)
    TIMES           reduce using rule 25 (var -> FROM .)
    MINUS           reduce using rule 25 (var -> FROM .)
    PLUS            reduce using rule 25 (var -> FROM .)
    RPAREN          reduce using rule 25 (var -> FROM .)
    NEQ             reduce using rule 25 (var -> FROM .)
    EQ              reduce using rule 25 (var -> FROM .)
    LTE             reduce using rule 25 (var -> FROM .)
    GTE             reduce using rule 25 (var -> FROM .)
    LT              reduce using rule 25 (var -> FROM .)
    GT              reduce using rule 25 (var -> FROM .)
    OR              reduce using rule 25 (var -> FROM .)
    AND             reduce using rule 25 (var -> FROM .)
    TO              reduce using rule 25 (var -> FROM .)
    BY              reduce using rule 25 (var -> FROM .)
    DO              reduce using rule 25 (var -> FROM .)


state 39

    (26) var -> VOID .
    COMMA           reduce using rule 26 (var -> VOID .)
    SEMICOLON       reduce using rule 26 (var -> VOID .)
    ASSIGN          reduce using rule 26 (var -> VOID .)
    DIVIDE          reduce using rule 26 (var -> VOID .)
    TIMES           reduce using rule 26 (var -> VOID .)
    MINUS           reduce using rule 26 (var -> VOID .)
    PLUS            reduce using rule 26 (var -> VOID .)
    RPAREN          reduce using rule 26 (var -> VOID .)
    NEQ             reduce using rule 26 (var -> VOID .)
    EQ              reduce using rule 26 (var -> VOID .)
    LTE             reduce using rule 26 (var -> VOID .)
    GTE             reduce using rule 26 (var -> VOID .)
    LT              reduce using rule 26 (var -> VOID .)
    GT              reduce using rule 26 (var -> VOID .)
    OR              reduce using rule 26 (var -> VOID .)
    AND             reduce using rule 26 (var -> VOID .)
    TO              reduce using rule 26 (var -> VOID .)
    BY              reduce using rule 26 (var -> VOID .)
    DO              reduce using rule 26 (var -> VOID .)


state 40
